Fix spacing when pagebreak on last child container
The last container does not have a sibling to apply the margin-top styling to. Generally what follows the last container is a new section. On print media, we will apply a margin-top to all sections, remove previous margins & paddings on containers, and add margin-bottom on the continaners. This is done because prior to print we needed more padding to fit the "Page Break" buttons. However on print we do not need the padding anymore, however we need consistent separation between containers, sections and the section when it starts on a new page.

--- a/client/src/ResumeTemplate/Corporate/corporate.scss
+++ b/client/src/ResumeTemplate/Corporate/corporate.scss
@@ -116,7 +116,7 @@ $top-section-height: 150px;
   }
 
   section:first-child {
-    margin-top: 0;
+    margin-top: 0 !important;
     border: none;
   }
 
@@ -156,7 +156,6 @@ $top-section-height: 150px;
     + .icon-row {
       margin-top: 0.5rem;
     }
-
   }
 
   .icon-svg {
@@ -178,6 +177,10 @@ $top-section-height: 150px;
   }
 
   .container {
+    margin-left: -1rem;
+    margin-right: -1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     padding-bottom: $margin-bottom-md;
   }
 
@@ -200,7 +203,24 @@ $top-section-height: 150px;
 }
 
 @media print {
-  .page-break-container + * {
-    margin-top: 1.5rem;
+  .corporate {
+    section {
+      margin-top: 1.5rem;
+    }
+
+    .page-break-container + * {
+      margin-top: 1.5rem;
+    }
+
+    .container {
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom: 1rem;
+      padding: 0;
+    }
+
+    .container:last-child {
+      margin-bottom: -0.5rem;
+    }
   }
 }
